...
    onClearLocation: () -> Unit,
    onClick: () -> Unit,
) {
    Row(
        modifier =
            Modifier
                .testTag("SEARCH_BAR_BUTTON")
                .fillMaxWidth()
                .wrapContentHeight()
                .clip(Shape.Full)
                .clickable(onClick = onClick)
                .background(
                    color = SurfaceColor.ContainerLow,
...
            provideStringResource("no_results")
        }

    Column(
        modifier =
            Modifier
                .testTag(if (!isSearching) "NO_RECENT_RESULTS" else "NO_RESULTS")
                .fillMaxWidth()
                .padding(vertical = 64.dp),
        verticalArrangement = spacedBy(16.dp),
        horizontalAlignment = CenterHorizontally,
    ) {
        Icon(
...
