...
    }
    BasicTextField(
        value = text,
        onValueChange = onQueryChange,
        modifier =
            modifier
                .testTag("SEARCH_INPUT")
                .height(SearchBarDefaults.InputFieldHeight)
                .fillMaxWidth()
                .background(containerColor, Shape.Full)
                .clip(Shape.Full)
                .focusRequester(focusRequester)
                .clickable(
...
